--- a/pages/components/tabs/tabs.module.css
+++ b/pages/components/tabs/tabs.module.css
@@ -1,10 +1,11 @@
 .tabDiv{
 
     margin-top: 4.62962963vh;
-    border-bottom: 0.092592593px solid #D9D9D9 ;
-        width: 83.33%;
+    border-bottom: 0.092592593vmin solid #D9D9D9 ;
+    width: 83.33%;
     margin-left: auto;
     margin-right: auto;
+    
 }
 
 .button {
@@ -12,20 +13,52 @@
     color: #191E3B;
     text-align: center;
     font-family: Inter;
-    font-size: 1.481481481vh;
+    font-size: 1.481481481vmin;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     background-color: transparent;
     border: none;
     width: 16.666666667%;
-    padding-bottom: 1.851851852vh;
+    padding-bottom: 1.759259259vh;
 
-  }
+}
   
 .active {
 
     border-bottom: 0.277777778vh solid  #FEBE43 ;
+    color: #FEBE43 ;
+    font-weight: 600;
+}
+
+
+
+@media (max-width:600px) {
+
+    .outerDiv{
+
+        width: 100%;
+        height: auto;
+        overflow-x: scroll; /* Enable horizontal scrolling */
+        overflow-y: hidden; /* Hide vertical scrollbar */
+        white-space: nowrap; 
+    }
+
+    .tabDiv{
+            /* display: flex; 
+            white-space: nowrap; */
+            width: 100%;
+        }
+    
+
+        .button{
+            /* flex-basis: 300px ; */
+            width: auto;
+            font-size: 3.181818182vmin ;
+            padding-right:3.409090909% ;
+            padding-left:3.409090909% ;
+            }
+
 }
 
 
